# procrustination

./: .gitignore  Cargo.toml  README.md
advent-2022/: .gitignore  Cargo.toml
advent-2022/.gitsecret/keys/: pubring.kbx  trustdb.gpg
advent-2022/src/: lib.rs  main.rs
advent-2022/src/day_1/: calorie_counting.rs
advent-2022/src/day_10/: cathode-ray_tube.rs  cathode_ray_tube.rs
advent-2022/src/day_2/: rock_paper_scissors.rs
advent-2022/src/day_21/: monkey_math.rs
advent-2022/src/day_23/: unstable_diffusion.rs
advent-2022/src/day_25/: full_of_hot_air.rs
advent-2022/src/day_3/: rucksack_reorganization.rs
advent-2022/src/day_4/: camp_cleanup.rs
advent-2022/src/day_5/: supply_stacks.rs
advent-2022/src/day_6/: tuning_trouble.rs
advent-2022/src/day_7/: no_space_left_on_device.rs
advent-2022/src/day_8/: treetop_tree_house.rs
advent-2022/src/day_9/: rope_bridge.rs
benches/: nonogram_solver_bench.rs  testbench_1.rs  testbench_2.rs
codewars/: Cargo.toml
codewars/src/: common_denominators.rs  int_partitions.rs  int_partitions_number.rs  lib.rs  operation_on_sequences.rs  plants_and_zombies.rs  street_fighter.rs  symbolic_differentiation_of_prefix_expressions.rs  test_frameworks_test.rs
codewars/src/blox_solver/: blox_solver_tests.rs  mod.rs
codewars/src/closest_pair_of_points_in_linearithmic_time/: mod.rs  skiplist_sol.rs  tests.rs
codewars/src/fix_pipes/: fix_pipes_sol.rs  fix_pipes_tests.rs
codewars/src/n_queens_challenge_version/: mod.rs  n_queens_challenge_version_tests.rs
codewars/src/nonogram_solvers/: mod.rs  nonogram_solver_bitsets.rs  nonogram_solver_slice.rs  tests.rs
codewars/src/spiral/: spiral_sol.rs
codewars/src/sudoku/: sudoku.rs  tests.rs
codewars/src/transforming_maze_solver/: mod.rs  transforming_maze_solver_sol.rs  transforming_maze_solver_tests.rs
leetcode/: Cargo.toml
leetcode/src/: container_with_most_water.rs  largest_rectangle_in_histogram.rs  lib.rs  longest_palindromic_substring.rs  remove_nth_node_from_end_of_list.rs  rotate_image.rs  search_in_rotated_sorted_array.rs  sort_colors.rs  sort_list.rs  unique_paths.rs
parsers/: Cargo.toml  README.md
parsers/src/: assembler_interpreter.rs  evaluate_mathematical_expression.rs  lib.rs  main.rs  simple_interactive_interpreter.rs  three_pass_compiler.rs
src/: alphabetic_anagrams.rs  lib.rs  main.rs  square_into_squares_protect_trees.rs
src/fix_pipes/: fix_pipes_sol.rs
